--- a/App_Themes/mainTheme/css/mainTheme.css
+++ b/App_Themes/mainTheme/css/mainTheme.css
@@ -7,6 +7,7 @@
 h1 { font-size: 16px; font-weight: bold; }
 h2 { font-size: 13px; font-weight: bold; }
 a img { border: 0; }
+:hover { transition-timing-function:ease; transition-duration:0.3s; }
 
 /* Ýçerik */
 .contentimage { float: left; margin: 0 10px 10px 0; max-width:300px; }
@@ -118,6 +119,7 @@ border-radius: 6px; box-shadow: 0 0 6px #dfdfdf; cursor: default;  float: left; 
 /* Duyuru Scroll */
 
 /* Listeler  */
+.mainlistitem { display: block; margin:10px 0; }
 .listitem { float: left; background-color:#fff; -moz-border-radius: 5px; -moz-box-shadow: 0 0 4px #ebebeb; -webkit-border-radius: 5px; -webkit-box-shadow: 0 0 4px #ebebeb; border: 1px solid #ebebeb; border-radius: 5px; box-shadow: 0 0 6px #ebebeb; margin: 0px 0px 15px 0px; width: 97%; padding: 10px; }
 .listimage { float: left; min-height: 50px; max-height: 125px; margin: 0 10px 5px 0; overflow: hidden; width: 150px; }
 .listname { font-size: 15px; font-weight: bold; margin: 0px 10px 5px 0px; text-align: left; }
